<resources>
    <string name="app_name">Project3-QuizApp</string>
    <string name="welcome_message">Hello and welcome to our space quiz!</string>
    <string name="name_prompt">Please enter your name.</string>
    <string name="start_quiz">Start quiz</string>
    <string name="submit">Submit answer</string>
    <string name="question_1">Which of the following planets are part of our solar system?</string>
    <string name="question_1_checkbox_1">Jupiter</string>
    <string name="question_1_checkbox_2">Sagittarius</string>
    <string name="question_1_checkbox_3">Halley</string>
    <string name="question_1_checkbox_4">Neptune</string>
    <string name="question_2">Who were members of the Apollo 11 mission to the moon?</string>
    <string name="question_2_checkbox_1">Neil Armstrong</string>
    <string name="question_2_checkbox_2">Alan Shepard</string>
    <string name="question_2_checkbox_3">Michael Collins</string>
    <string name="question_2_checkbox_4">Buzz Aldrin</string>
    <string name="question_3">Which of these planets are considered gas planets?</string>
    <string name="question_3_checkbox_1">Mercury</string>
    <string name="question_3_checkbox_2">Venus</string>
    <string name="question_3_checkbox_3">Uranus</string>
    <string name="question_3_checkbox_4">Saturn</string>
    <string name="pic_question_text">What is the name of the planet in the picture?</string>
    <string name="question_7">The sun is a</string>
    <string name="question_7_radio_button_1">galaxy</string>
    <string name="question_7_radio_button_2">star</string>
    <string name="question_7_radio_button_3">asteroid</string>
    <string name="question_7_radio_button_4">planet</string>
    <string name="question_8">A spiral shaped system is known as a</string>
    <string name="question_8_radio_button_1">star nebula</string>
    <string name="question_8_radio_button_2">star cluster</string>
    <string name="question_8_radio_button_3">galaxy</string>
    <string name="question_8_radio_button_4">super nova</string>
    <string name="question_9">What is the name of our home galaxy?</string>
    <string name="question_9_radio_button_1">Andromeda </string>
    <string name="question_9_radio_button_2">Milky way </string>
    <string name="question_9_radio_button_3">Messier 81 </string>
    <string name="question_9_radio_button_4">Centaurus A </string>
    <string name="question_10">In what units are long distances in space measured?</string>
    <string name="question_10_radio_button_1">miles </string>
    <string name="question_10_radio_button_2">kilometers </string>
    <string name="question_10_radio_button_3">light years </string>
    <string name="question_10_radio_button_4">astronomical units </string>
    <string name="answer_to_question_1">14</string>
    <string name="answer_to_question_2">134</string>
    <string name="answer_to_question_3">34</string>
    <string name="answer_to_question_4">saturn</string>
    <string name="answer_to_question_5">pluto</string>
    <string name="answer_to_question_6">mars</string>
    <string name="answer_to_question_7">2</string>
    <string name="answer_to_question_8">3</string>
    <string name="answer_to_question_9">2</string>
    <string name="answer_to_question_10">3</string>
    <string name="show_answer">Show answers</string>
    <string name="back_to_start">Restart quiz</string>
</resources>
