<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.georgekaraolanis.project3_quizapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/padding_top"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/welcome_message"
            android:id="@+id/question"
            android:paddingTop="@dimen/padding_top"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_height"
            android:src="@drawable/quiz"
            android:id="@+id/image"
            android:paddingTop="@dimen/padding_top"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_prompt"
            android:id="@+id/edit_text"
            android:textSize="@dimen/text_size"
            android:paddingTop="@dimen/padding_top" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/checkboxes"
            android:paddingTop="@dimen/padding_top">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:id="@+id/checkbox_1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:id="@+id/checkbox_2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:id="@+id/checkbox_3" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:id="@+id/checkbox_4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/radio_buttons"
            android:paddingTop="@dimen/padding_top">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/radio_button_1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/radio_button_2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/radio_button_3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/radio_button_4" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_quiz"
            android:id="@+id/submit_button"
            android:onClick="showNextQuestion"
            android:textSize="@dimen/button_text_size"
            android:paddingTop="@dimen/padding_top"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_answer"
            android:id="@+id/show_answers"
            android:visibility="gone"
            android:onClick="showAnswers"
            android:textSize="@dimen/button_text_size"
            android:paddingTop="@dimen/padding_top"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_start"
            android:id="@+id/back_to_start"
            android:visibility="gone"
            android:onClick="restartQuiz"
            android:textSize="@dimen/button_text_size"
            android:paddingTop="@dimen/padding_top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/answers"
            android:visibility="gone"
            android:paddingTop="@dimen/padding_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/padding_top"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_1_checkbox_1"
                android:enabled="false"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_1_checkbox_2"
                android:enabled="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_1_checkbox_3"
                android:enabled="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_1_checkbox_4"
                android:enabled="false"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/padding_top"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_2_checkbox_1"
                android:enabled="false"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_2_checkbox_2"
                android:enabled="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_2_checkbox_3"
                android:enabled="false"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_2_checkbox_4"
                android:enabled="false"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/padding_top"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_3_checkbox_1"
                android:enabled="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_3_checkbox_2"
                android:enabled="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_3_checkbox_3"
                android:enabled="false"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="@string/question_3_checkbox_4"
                android:enabled="false"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/pic_question_text"
                android:paddingTop="@dimen/padding_top"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_height"
                android:src="@drawable/saturn"
                android:paddingTop="@dimen/padding_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/answer_to_question_4"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/padding_top"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/pic_question_text"
                android:paddingTop="@dimen/padding_top"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_height"
                android:src="@drawable/mars"
                android:paddingTop="@dimen/padding_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/answer_to_question_5"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/padding_top"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/pic_question_text"
                android:paddingTop="@dimen/padding_top"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_height"
                android:src="@drawable/pluto"
                android:paddingTop="@dimen/padding_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/answer_to_question_6"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/padding_top"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_7"
                android:paddingTop="@dimen/padding_top"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_7_radio_button_1"
                android:enabled="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_7_radio_button_2"
                android:enabled="false"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_7_radio_button_3"
                android:enabled="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_7_radio_button_4"
                android:enabled="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_8"
                android:paddingTop="@dimen/padding_top"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_8_radio_button_1"
                android:enabled="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_8_radio_button_2"
                android:enabled="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_8_radio_button_3"
                android:enabled="false"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_8_radio_button_4"
                android:enabled="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_9"
                android:paddingTop="@dimen/padding_top"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_9_radio_button_1"
                android:enabled="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_9_radio_button_2"
                android:enabled="false"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_9_radio_button_3"
                android:enabled="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_9_radio_button_4"
                android:enabled="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_10"
                android:paddingTop="@dimen/padding_top"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_10_radio_button_1"
                android:enabled="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_10_radio_button_2"
                android:enabled="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_10_radio_button_3"
                android:enabled="false"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/question_10_radio_button_4"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
